fixing the padding and spacing for the error page module

--- a/docs/css/responsive-modules.css
+++ b/docs/css/responsive-modules.css
@@ -973,10 +973,64 @@
     margin: 0;
   }
 }
-@media (min-width: 61.1875em) {
-  /* line 7, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+@media (max-width: 47.9375em) {
+  /* line 9, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
   .error-pages .content {
-    margin-left: 52px;
+    margin-left: 0;
+    height: auto;
+  }
+  /* line 13, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-content-main {
+    height: auto;
+    display: table;
+    margin-bottom: 50px;
+  }
+  /* line 18, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-content-inner {
+    display: table-cell;
+    vertical-align: top;
+    padding: 66px 0 50px 0;
+  }
+  /* line 23, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-content-paragraph {
+    margin-bottom: 22px;
+  }
+  /* line 26, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-box {
+    display: inline-block;
+    padding: 15px;
+    background-color: #f1f5f9;
+    color: #2f353d;
+  }
+}
+@media (max-width: 35.5em) {
+  /* line 37, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .content {
+    margin-left: 0;
+    height: auto;
+  }
+  /* line 41, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-content-main {
+    height: auto;
+    display: table;
+    margin-bottom: 50px;
+  }
+  /* line 46, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-content-inner {
+    display: table-cell;
+    vertical-align: top;
+    padding: 66px 0 50px 0;
+  }
+  /* line 51, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-content-paragraph {
+    margin-bottom: 22px;
+  }
+  /* line 54, ../../src/packages/modules/error-pages-z18/css/_responsive-error-pages-z18.scss */
+  .error-pages .error-box {
+    display: inline-block;
+    padding: 15px;
+    background-color: #f1f5f9;
+    color: #2f353d;
   }
 }
 @media (min-width: 30em) and (max-width: 61.1875em) {
