--- a/src/packages/modules/error-pages-z18/css/error-pages-z18.scss
+++ b/src/packages/modules/error-pages-z18/css/error-pages-z18.scss
@@ -2,25 +2,26 @@
 
 
 .error-pages {
-  .content {
+  .error-content-main {
     height: 560px;
     display: table;
   }
-  .error-content-main {
+  .error-content-inner {
     display: table-cell;
     vertical-align: middle;
-    height: 50%;
     padding: 70px 52px 50px 52px;
   }
   .error-content-paragraph {
     margin-bottom: 38px;
   }
   .error-box {
-      display: inline-block;
-      padding: 25px 30px 20px;
-
-      background-color: $gray80;
-
+    display: inline-block;
+    padding: 10px 18px;
+    background-color: $gray80;
+    color: $gray20;
+    p {
+      margin-bottom: 0;
       color: $gray20;
+    }
   }
 }
